--- a/k8s/demo-users/templates/serviceaccount.yaml
+++ b/k8s/demo-users/templates/serviceaccount.yaml
@@ -10,4 +10,18 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 automountServiceAccountToken: {{ .Values.serviceAccount.automount }}
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: {{ include "demo.serviceAccountName" . }}-rolebinding
+subjects:
+- kind: ServiceAccount
+  name: log-reader
+  namespace: {{ .Release.Namespace }}
+roleRef:
+  kind: ClusterRole
+  # 1.1. Misconfigured RBAC
+  name: cluster-admin
+  apiGroup: rbac.authorization.k8s.io
 {{- end }}
